# swayipc

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: autoinc_workspace.py  show_titlebar_smart.py  transparent_unfocused_windows.py
swayipc/: __init__.py  criteria.py  event.py  ipc.py  loadable.py  model.py
